src/tests/valid/ivdserial/orientation.ivdserial
=================================Element========================================
Path: anonymous-0-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
------------Attr Key: orientation
Property: adjacent-is-horizontal
=================================Element========================================
Path: anonymous-1-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
------------Attr Key: orientation
Property: adjacent-is-vertical
