src/tests/errors/ivdserial/property.ivdserial
The IVD compiler has encountered the following error:
Syntax error on line 3:
    align-horizontal: center;
                      ^
Malformed attribute body, expected Property.

---------------------------------------------------
=================================Element========================================
Path: anonymous-0-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
